# my-c-app

./: CMakeLists.txt  Makefile  README.md  main.c
include/: linked_list.h  mempool.h  vector.h
src/: linked_list.c  main.c  mempool.c  vector.c
